# custom-monorepo-template

./: .gitignore  LICENSE  README.md  chalkland.ipynb  chalkland.xlsx  pyproject.toml
.github/workflows/: verify_installable.yaml
notebooks/: chalkland.ipynb
